# daq_pipeline

./: .gitignore  CMakeLists.txt  build_in_docker.sh
docker/: Dockerfile  Dockerfile_base  build_base.sh
docker/stream_generator/: Dockerfile_generator  build_generator.sh  start_stream.py
operational_tools/: bash_run.sh  deploy.sh  gen_sources.py  template_daq_pipeline.json  template_generator.json
src/: CMakeLists.txt  CassandraWriter.cpp  CassandraWriter.h  ChannelData.h  ChannelValue.cpp  ChannelValue.h  Data.h  IDataReceiver.h  IDataStats.h  IDataStore.h  IStatsProvider.h  commons.h  config.h  main.cpp  version.h.in
src/bsread/: Receiver.cpp  Receiver.h  compression.cpp  compression.h  constants.h
src/receiver/: BsreadReceiver.cpp  BsreadReceiver.h
src/scylla/: Store.cpp  Store.h
src/stats/: BaseStats.cpp  BaseStats.h  ConsoleStats.cpp  ConsoleStats.h
src/store/: ScyllaStore.cpp  ScyllaStore.h
test/: CMakeLists.txt  test_bsread.cpp
